Changes - Fixed a bug with invalid uris.